<resources>
    <string name="app_name" translatable="false">E-Shop</string>
    <string name="i_forgot_my_password">I forgot my password.</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="signup">SignUp</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="explore">Explore</string>
    <string name="check_your_email_inbox">Check your email inbox 📩</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="cart">Cart</string>
    <string name="my_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="orders">Orders</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="place_order">place order</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="save_changes">Save changes</string>
    <string name="address">address</string>
    <string name="edit">Edit</string>
    <string name="get_your_location">Get Your Location</string>
</resources>